@@ -1,3 +1,7 @@
+2009-06-15  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclStringObj.c: sprintf() -> Tcl_ObjPrintf() conversion.
+
 2009-06-13  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclCompile.c:	The value stashed in iPtr->compiledProcPtr
